--- a/css/media.css
+++ b/css/media.css
@@ -1,193 +1,354 @@
+@media screen and (max-width: 393px) {
+  .mob-menu_phone-text {
+    font-size: 20px;
+    line-height: 2;
+  }
+}
+@media screen and (max-width: 427px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/hero-bg-mob-1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/hero-bg-mob-2x.jpg);
+    }
+  }
+
+  .modal {
+    width: 90%;
+  }
+}
 @media screen and (min-width: 428px) {
+  .container {
+    width: 428px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/hero-bg-tab-1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/hero-bg-tab-2x.jpg);
+    }
+  }
+}
+@media screen and (max-width: 767px) {
+  .menu-list {
+    display: none;
+  }
+  .address-menu {
+    display: none;
+  }
+  .card-title {
+    text-align: center;
+  }
+  .footer-tab-wrap {
+    width: 100%;
+    flex-direction: column;
+  }
+  .footer-wrap {
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 72px;
+    margin-bottom: 72px;
+  }
+
+  .footer-logo-text {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer-text {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer-sub-btn {
+    width: 165px;
+  }
+  .footer-email-sub {
+    width: 100%;
+  }
+  .footer-social-media {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .footer-social-text {
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+  }
+  .footer-logo-container {
+    width: 100%;
+  }
+  .footer-subscribe-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  .footer-subscribe-input {
+    flex-direction: column;
+  }
+
+  .footer-sub-btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  /*--------- header ----------*/
-
   .container {
-    width: 736px;
+    width: 768px;
   }
 
   .logo {
     margin-right: 120px;
   }
 
-  .menu-nav {
-    margin-right: 120px;
+  .header-menu {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
-  .menu-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
-
-  .menu-item {
-    gap: 40px;
-  }
-
-  .menu-item::after,
-  .menu-item::after {
-    content: "";
-    height: 4px;
-    border-radius: 2px;
-    display: block;
-    position: absolute;
-  }
-
-  .menu-text {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    transition: color var(--transition-time);
-    position: relative;
-    display: block;
-  }
-
-  .menu-text:hover,
-  .menu-text:focus {
-    color: var(--hover-color);
-  }
-
-  .current {
-    color: var(--hover-color);
-  }
-
-  .current::after {
-    content: "";
-    position: absolute;
-    display: block;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    width: 100%;
-    background-color: var(--hover-color);
-    border-radius: 2px;
-  }
-
-  .address-list {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .address-text {
-    color: var(--primary-text-color);
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.04em;
-    transition: color var(--transition-time);
-  }
-  .address-text:hover,
-  .address-text:focus {
-    color: var(--hover-color);
-  }
-
-  .burger-wrap {
+  .mob-menu {
     display: none;
   }
+
+  .mob-menu-open {
+    display: none;
+  }
+
+  /* .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/hero-bg-tab-1x.jpg);
+  } */
+
+  .hero-title {
+    max-width: 496px;
+    margin-bottom: 48px;
+    font-size: 56px;
+    line-height: 1.07;
+  }
+  .team-wrap {
+    width: 768px;
+  }
+  .card-list {
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+    flex-direction: row;
+  }
+
+  .customers-item {
+    width: calc((100% - 24px) / 4);
+  }
+  .footer-wrap {
+    margin-left: auto;
+    margin-right: auto;
+
+    .footer-social-media {
+      align-items: baseline;
+    }
+    .footer-email-sub {
+      width: 264px;
+    }
+
+    .footer-logo-container {
+      max-width: 264px;
+    }
+
+    .footer-subscribe-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .footer-subscribe-input {
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+    .modal {
+      width: 408px;
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1157px) {
+    .team-card-wrap {
+      width: 582px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .customers-wrap {
+      width: 582px;
+    }
+    .customers-item {
+      width: 178px;
+    }
+    .footer-tab-wrap {
+      width: 582px;
+      flex-direction: column;
+    }
+
+    .footer-wrap {
+      margin-bottom: 72px;
+      gap: 24px;
+    }
+  }
 }
+@media screen and (max-width: 1157px) {
+  .features-icon-container {
+    display: none;
+  }
+  .examples {
+    display: none;
+  }
+  .service-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-transform: capitalize;
+    letter-spacing: 0.02em;
+  }
+  .service-text {
+    font-weight: 500;
+  }
+  .footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
 
+  .footer-subscribe-input {
+    gap: 24px;
+  }
+  .footer-email-sub {
+    opacity: 0.30000001192092896;
+  }
+}
 @media screen and (min-width: 1158px) {
-  /*--------- header ----------*/
-
   .container {
     width: 1158px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
-
-  .header-container {
-    justify-content: space-between;
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
-
   .logo {
     margin-right: 76px;
   }
 
-  .menu-nav {
-    justify-content: left;
+  .address-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
-
-  .menu-list {
+  .address-list {
     display: flex;
     align-items: center;
     gap: 40px;
   }
 
-  .menu-item {
-    gap: 40px;
+  .hero {
+    padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/bg.jpg);
   }
-
-  .menu-item::after,
-  .menu-item::after {
-    content: "";
-    height: 4px;
-    border-radius: 2px;
-    display: block;
-    position: absolute;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/hero-bg-2x.jpg);
+    }
   }
-
-  .menu-text {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    color: var(--title-text-color);
+  .card-title {
     font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  .card-text {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
-    transition: color var(--transition-time);
-    position: relative;
-    display: block;
   }
-
-  .menu-text:hover,
-  .menu-text:focus {
-    color: var(--hover-color);
-  }
-
-  .current {
-    color: var(--hover-color);
-  }
-
-  .current::after {
-    content: "";
-    position: absolute;
-    display: block;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    width: 100%;
-    background-color: var(--hover-color);
-    border-radius: 2px;
-  }
-
-  .address-list {
+  .card-list {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    gap: 24px;
   }
 
-  .address-item:not(:last-child) {
-    margin-right: 40px;
+  .card-item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
+  }
+  .examples {
+    flex-wrap: wrap;
+    padding-bottom: 120px;
+    background-color: var(--white-text-color);
   }
 
-  .address-text {
-    color: var(--primary-text-color);
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition: color var(--transition-time);
+  /* формула якщо не прогрузиться картинка то розмір елементу збережеться */
+
+  .examples-card-item {
+    flex-basis: calc((100% - 2 * 24px) / 3);
+    border: 1px solid var(--stroke-colour);
   }
-  .address-text:hover,
-  .address-text:focus {
-    color: var(--hover-color);
+  .customers-icon-list {
+    width: 1158px;
+  }
+
+  .customers-item {
+    width: calc((100% - 120px) / 6);
+  }
+  .footer-box {
+    flex-direction: row;
+    padding: 100px 0;
+  }
+  .footer-tab-wrap {
+    display: flex;
+  }
+
+  .footer-logo-container {
+    margin-right: 120px;
+  }
+  .footer-social-media {
+    align-items: baseline;
+    margin-right: 80px;
+  }
+  .footer-subscribe-input {
+    gap: 24px;
   }
 }
